--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>库存管理软件v1.0</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -130,7 +130,7 @@
         <string>提交</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="commitButton_2">
+      <widget class="QPushButton" name="addClassButton">
        <property name="geometry">
         <rect>
          <x>440</x>
@@ -141,6 +141,32 @@
        </property>
        <property name="text">
         <string>添加物品种类</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="exportButton">
+       <property name="geometry">
+        <rect>
+         <x>620</x>
+         <y>20</y>
+         <width>114</width>
+         <height>32</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>导出</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_5">
+       <property name="geometry">
+        <rect>
+         <x>747</x>
+         <y>53</y>
+         <width>31</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>zj14</string>
        </property>
       </widget>
      </widget>
