1.增加ico 2.调整ui 3.可提交空数据

--- a/addclass.ui
+++ b/addclass.ui
@@ -23,7 +23,11 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>添加物品种类</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>ksig.ico</normaloff>ksig.ico</iconset>
   </property>
   <widget class="QPushButton" name="flushButton">
    <property name="geometry">
