--- a/addclass.ui
+++ b/addclass.ui
@@ -56,7 +56,7 @@
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>41</y>
+     <y>32</y>
      <width>110</width>
      <height>25</height>
     </rect>
@@ -69,7 +69,7 @@
    <property name="geometry">
     <rect>
      <x>350</x>
-     <y>68</y>
+     <y>72</y>
      <width>110</width>
      <height>25</height>
     </rect>
@@ -132,6 +132,19 @@
      <width>111</width>
      <height>21</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="modifyButton">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>52</y>
+     <width>110</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>修改</string>
    </property>
   </widget>
  </widget>
