--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -36,156 +36,126 @@
         <height>70</height>
        </size>
       </property>
-      <widget class="QLabel" name="label">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>10</y>
-         <width>62</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>物品名</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_2">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>40</y>
-         <width>62</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>规格</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="serachButton">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>4</y>
-         <width>110</width>
-         <height>25</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>查找</string>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="namesComboBox">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>5</y>
-         <width>110</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QComboBox" name="etalonComboBox">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>34</y>
-         <width>110</width>
-         <height>25</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="addButton">
-       <property name="geometry">
-        <rect>
-         <x>190</x>
-         <y>34</y>
-         <width>110</width>
-         <height>25</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>新增</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="delButton">
-       <property name="geometry">
-        <rect>
-         <x>310</x>
-         <y>4</y>
-         <width>110</width>
-         <height>25</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>删除</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="commitButton">
-       <property name="geometry">
-        <rect>
-         <x>310</x>
-         <y>34</y>
-         <width>110</width>
-         <height>25</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>提交</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="addClassButton">
-       <property name="geometry">
-        <rect>
-         <x>440</x>
-         <y>20</y>
-         <width>114</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>添加物品种类</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="exportButton">
-       <property name="geometry">
-        <rect>
-         <x>683</x>
-         <y>20</y>
-         <width>51</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>导出</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_5">
-       <property name="geometry">
-        <rect>
-         <x>747</x>
-         <y>53</y>
-         <width>31</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>zj14</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="showLastRecordButton">
-       <property name="geometry">
-        <rect>
-         <x>560</x>
-         <y>20</y>
-         <width>114</width>
-         <height>32</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>查看库存</string>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="5,1,2,1,0">
+       <item>
+        <layout class="QVBoxLayout" name="verticalLayout_2">
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,3,1,1">
+           <item>
+            <widget class="QLabel" name="label">
+             <property name="text">
+              <string>物品名</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="namesComboBox"/>
+           </item>
+           <item>
+            <widget class="QPushButton" name="serachButton">
+             <property name="text">
+              <string>查找</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="delButton">
+             <property name="text">
+              <string>删除</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,3,1,1">
+           <item>
+            <widget class="QLabel" name="label_2">
+             <property name="text">
+              <string>规格</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QComboBox" name="etalonComboBox"/>
+           </item>
+           <item>
+            <widget class="QPushButton" name="addButton">
+             <property name="text">
+              <string>新增</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="commitButton">
+             <property name="text">
+              <string>提交</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="2,2,2">
+         <item>
+          <widget class="QPushButton" name="exportButton">
+           <property name="text">
+            <string>导出</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="addClassButton">
+           <property name="text">
+            <string>添加物品种类</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="showLastRecordButton">
+           <property name="text">
+            <string>查看库存</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <spacer name="horizontalSpacer_2">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_5">
+         <property name="text">
+          <string>zj14</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
     <item>
