1.增加小键盘enter键切换记录单元格功能。 2.查看库存功能现显示某物品某规格最后一条记录。 3.当库存(旧)或库存(新)修改时，自动修改库存合计。

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -159,7 +159,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QTableWidget" name="tableWidget">
+     <widget class="zjTableWidget" name="tableWidget">
       <property name="contextMenuPolicy">
        <enum>Qt::DefaultContextMenu</enum>
       </property>
@@ -286,6 +286,13 @@
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>zjTableWidget</class>
+   <extends>QTableWidget</extends>
+   <header>zjtablewidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
